--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   },
   "dependencies": {
     "pinia": "^2.0.28",
+    "v3-infinite-loading": "^1.2.2",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
+    "autoprefixer": "^10.4.13",
     "cypress": "^12.0.2",
     "jsdom": "^20.0.3",
+    "postcss": "^8.4.21",
+    "sass": "^1.58.0",
+    "sass-loader": "^13.2.0",
     "start-server-and-test": "^1.15.2",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0",
     "vitest": "^0.25.6"
   }
